@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Command {
        - cmd : String
        - definitions : Map<Integer, String>
        - word : String
        + toString()
        ~ Command()
        ~ parseArgs()
        ~ parseCmd()
    }
  }
  

  namespace  {
    class Controller {
        {static} + close_text : String
        {static} + del_text : String
        - addWordButton : Button
        - connectButton : Button
        - definitions : TreeView<String>
        - deleteWordButton : Button
        - editPanel : TextArea
        - editWordButton : Button
        - queryBox : TextField
        - root : TreeItem<String>
        - saveEditButton : Button
        - searchButton : Button
        - selected : TreeItem<String>
        - serverAddress : TextField
        - serverPort : TextField
        - status : Label
        - wordTitle : TextField
        - words : ArrayList<String>
        + Controller()
        + addButtonHandler()
        + addEmptyItem()
        + connect()
        + deleteEntry()
        + editEntry()
        + initialize()
        + removeWordOrDef()
        + saveButtonHandler()
        + searchButtonClicked()
        + setEditMode()
        + setEditMode()
        - addWord()
        - addWordItem()
        - changeState()
        - getDefs()
    }
  }
  

  namespace  {
    enum UIState {
      CLOSE_EDITOR
      CONNECTING_SERVER
      IDLE
      LOST_SERVER
      NO_SERVER
      WORD_EDITING
      WORD_LIST_LOADING
    }
  }
  

  namespace  {
    class DictionaryClient {
        ~ PORT : int
        ~ aHost : InetAddress
        + DictionaryClient()
        {static} + main()
        ~ DictionaryClient()
        {static} - CLIent()
        - commandInterface()
    }
  }
  

  namespace  {
    class DictionaryGUI {
        + start()
        + stop()
    }
  }
  

  namespace  {
    class ServerIO {
        {static} + DEF_TIMEOUT : int
        - dsock : DatagramSocket
        - host : InetAddress
        - hostname : String
        - port : Integer
        + addWord()
        + closeSocket()
        + getDefs()
        + getHostname()
        + getPort()
        + getWordList()
        + openSocket()
        + removeDef()
        + removeWord()
        + setDef()
        ~ ServerIO()
        - sendCommand()
    }
  }
  

  Controller o-- ServerIO : server
  Controller o-- Controller.UIState : state
  Controller +-down- Controller.UIState
  DictionaryGUI -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
